<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="8dp" />

    <EditText
        android:id="@+id/edtLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_nome" />

    <EditText
        android:id="@+id/edtTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_tipo" />

    <EditText
        android:id="@+id/edtGrau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_grau" />

    <EditText
        android:id="@+id/edtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_data" />

    <EditText
        android:id="@+id/edtPessoas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/campo_numero_pessoas" />

    <Button
        android:id="@+id/btnIncluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incluir" />

    <Button
        android:id="@+id/btnIdentificacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Identificação" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
